--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/Brian-elm/Morpion#readme",
   "dependencies": {
     "express": "^4.19.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jsdom": "^24.1.0"
+  },
+  "devDependencies": {
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
