--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,10 @@
     "jsdom": "^24.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "eslint": "^9.6.0",
+    "eslint-plugin-jest": "^28.6.0",
+    "globals": "^15.8.0",
     "jest-environment-jsdom": "^29.7.0"
   }
 }
